--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "test": "editorconfig-cli",
-    "build": "grunt less && grunt postcss",
+    "build": "grunt less && grunt postcss && grunt csso",
     "start": "npm run build && grunt serve"
   },
   "editorconfig-cli": [
@@ -27,5 +27,8 @@
   ],
   "engines": {
     "node": "6.7"
+  },
+  "dependencies": {    
+    "grunt-csso": "^2.2.0"
   }
 }
