--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "private": true,
   "description": "Сайт pd73.ru",
   "devDependencies": {
+    "@htmlacademy/editorconfig-cli": "0.1.x",
     "autoprefixer": "6.5.3",
     "grunt": "1.0.1",
     "grunt-browser-sync": "2.2.0",
     "grunt-contrib-less": "1.4.0",
     "grunt-contrib-watch": "1.0.0",
     "grunt-postcss": "0.8.0",
-    "@htmlacademy/editorconfig-cli": "0.1.x"
+    "grunt-webp": "0.0.4"
   },
   "scripts": {
     "test": "editorconfig-cli",
-    "build": "grunt less && grunt postcss && grunt csso",
-    "start": "npm run build && grunt serve"
+    "build": "grunt less && grunt postcss && grunt csso && grunt webp",
+    "start": "npm run build && grunt serve",
+    "webp": "grunt webp"
   },
   "editorconfig-cli": [
     "*.html",
@@ -28,7 +30,7 @@
   "engines": {
     "node": "6.7"
   },
-  "dependencies": {    
+  "dependencies": {
     "grunt-csso": "^2.2.0"
   }
 }
