--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "test": "editorconfig-cli",
-    "build": "grunt less && grunt autoprefixer && grunt csso && grunt uglify",
+    "build": "grunt less && grunt autoprefixer && grunt csso",
     "start": "npm run build && grunt serve",
     "webp": "grunt webp",
     "auto": "grunt autoprefixer",
