--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "grunt-contrib-uglify": "^2.1.0",
     "grunt-contrib-watch": "1.0.0",
     "grunt-postcss": "0.8.0",
-    "grunt-webp": "0.0.4",
+    "grunt-webp": "^0.0.4",
     "multiparty": "latest"
   },
   "scripts": {
@@ -36,6 +36,11 @@
     "node": "6.7"
   },
   "dependencies": {
-    "grunt-csso": "^2.2.0"
+    "cwebp": "^2.0.2",
+    "cwebp-bin": "^2.0.5",
+    "grunt-cli": "^1.2.0",
+    "grunt-csso": "^2.2.0",
+    "micromatch": "^3.1.5",
+    "webp-bin": "^0.1.4"
   }
 }
